fix too large text on mobile

--- a/src/scss/settings/_typography.scss
+++ b/src/scss/settings/_typography.scss
@@ -48,6 +48,10 @@ $gwg-typography-scale: (
   ),
   85: (
     null: (
+      font-size: 42px,
+      line-height: 46px
+    ),
+    mobileLandscape: (
       font-size: 60px,
       line-height: 64px
     ),
